--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </header>
   <nav>
     <ul>
-      <li><a href="/Pags/matricula.html">Formulário de Matrícula.</a></li>
-      <li><a href="/Pags/cadastro.html">Ficha de Cadastro.</a></li>
-      <li><a href="/Pags/lista.html">Lista de Inscritos.</a></li>
+      <li><a href="/Pmatricula.html">Formulário de Matrícula.</a></li>
+      <li><a href="/cadastro.html">Ficha de Cadastro.</a></li>
+      <li><a href="/lista.html">Lista de Inscritos.</a></li>
     </ul>
   </nav>
 </body>
